--- a/WebServ/templates/upload.html
+++ b/WebServ/templates/upload.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Upload</title>
+    <title>Image Classify</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <script src="static/js/jquery.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
@@ -11,7 +11,7 @@
 </style>
 <body>
 
-<form action="{{url_for('upload')}}" method="POST" enctype="multipart/form-data">
+<form action="{{url_for('clf_upload')}}" method="POST" enctype="multipart/form-data">
     <input type="file" id="media" name="media">
     <input type="submit">
 </form>
@@ -49,7 +49,7 @@
                 return xhr;
             },
             type: 'POST',
-            url: '/classify',
+            url: {{url_for('clf_upload')}},
             cache: false,
             data: formData,
             // 告诉 jQuery 不要去处理发送的数据
