--- a/WebServ/templates/upload_loadimg.html
+++ b/WebServ/templates/upload_loadimg.html
@@ -13,10 +13,10 @@
 
 <style>
 	.mainarea {
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+		position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translate(-50%, -50%);
 	}	
 </style>
 </head>
@@ -29,13 +29,15 @@
 	</header>
 	<br>
 	<div class='mainarea'>
-		<form id=submitform action="{{url_for('upload')}}" method="POST" enctype="multipart/form-data">
+		<form action="{{url_for('clf_upload')}}" method="POST" enctype="multipart/form-data" id='uploadform'>
+    		
     		<div id='submit_area' >
-				<input type = "submit"  id = 'submit_btn' value='分析图片' class="btn btn-primary" >
+				<input type = "submit"  id = 'submit_btn' value='分析图片' class="btn btn-primary"  >
 			</div>
+			
     		<div class=upbox style="width:300px;">
     			<label id="upload">
-				<input type="file" id="picbox" name="media">
+				<input type="file" id="picbox" name="media" onchange="selectFile(this);">
 				</label>
 			</div>
 		
@@ -60,7 +62,7 @@
    
 <script type="text/javascript">
 
-    $("#submitform").on('submit', function (event) {
+	$('form').on('submit', function (event) {
     	// 显示 图
     	
     	$("#res").html('<h2>'+ '分析中' + '</h2>')
@@ -82,7 +84,7 @@
                 return xhr;
             },
             type: 'POST',
-            url: '/classify',
+            url: '{{url_for('clf_upload')}}',
             cache: false,
             data: formData,
             // 告诉 jQuery 不要去处理发送的数据
@@ -101,12 +103,25 @@
             alert('上传失败!');
         });
     });
+    function selectFile(input) {
+        if (input.files && input.files[0]) {
+           //show thumbnail 
+           //
+          // submitForm();
+          
+        }
+    }
+    function submitForm(){
+    	//console.log('submitForm')
+    
+    	$("#uploadform").submit(); 
+    }
     
 </script>
 	<!-- loadimg plugin : https://github.com/marwenhlaoui/LoadImg -->
-	<script src="static/js/jquery.min.js"></script>
-	<script src="static/js/loadimg.min.js"></script>
-	<script type="text/javascript">
+<script src="static/js/jquery.min.js"></script>
+<script src="static/js/loadimg.min.js"></script>
+<script type="text/javascript">
 		$('#upload').loadImg({
 			"text"			: "Cick here to select a image ...",
 			"fileExt"		: ["png","jpg"],
